syntax = "proto3";

package ping;

option go_package = "github.com/cga1123/slugcmplr/services/ping";

service Ping {
  rpc Echo(EchoRequest) returns (EchoResponse);
  rpc Boom(BoomRequest) returns (BoomResponse);
}

message BoomRequest {}
message BoomResponse {}

message EchoRequest {
  string msg = 1;
}

message EchoResponse {
  string msg = 1;
}
